# django-untangled

./: README.md  poetry.toml  pyproject.toml
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
mysite/users/: models.py  serializers.py  tests.py
mysite/users/migrations/: 0001_initial.py
