[tool.poetry]
name = "django-untangled"
version = "0.1.0"
description = ""
authors = ["peter"]
readme = "README.md"
packages = [{include = "django_untangled"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
